tests/ui/duplicate-struct-source.stderr
error: duplicate #[source] attribute
 --> tests/ui/duplicate-struct-source.rs:7:5
  |
7 |     #[source]
  |     ^^^^^^^^^

error[E0277]: `ErrorStruct` doesn't implement `std::fmt::Display`
 --> tests/ui/duplicate-struct-source.rs:4:12
  |
4 | pub struct ErrorStruct {
  |            ^^^^^^^^^^^ `ErrorStruct` cannot be formatted with the default formatter
  |
  = help: the trait `std::fmt::Display` is not implemented for `ErrorStruct`
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
note: required by a bound in `std::error::Error`
 --> $RUST/core/src/error.rs
  |
  | pub trait Error: Debug + Display {
  |                          ^^^^^^^ required by this bound in `Error`
